--- a/home.html
+++ b/home.html
@@ -16,7 +16,7 @@
 			<ul>
 				<li><a href="recipetemplate.html"><span class="recipe">Recipe R1</span></a> by Eddie Estrada</li>
 				<li><a href="recipetemplate.html"><span class="recipe">Recipe R2</span></a> by Grace Tenny</li>
-				<li><a href="recipetemplate.html"><span class="recipe">Recipe R3</span></a> by Reginald Finney</li>
+				<li><a href="pancakes.html"><span class="recipe">Recipe R3</span></a> by Reginald Finney</li>
 			</ul>
 		</div>
 		</main>
