add recipe to homepage

--- a/home.html
+++ b/home.html
@@ -15,7 +15,7 @@
 		<div id="recipelist">
 			<ul>
 				<li><a href="recipetemplate.html"><span class="recipe">Recipe R1</span></a> by Eddie Estrada</li>
-				<li><a href="recipetemplate.html"><span class="recipe">Recipe R2</span></a> by Grace Tenny</li>
+				<li><a href="strawberrydumpcake.html"><span class="recipe">Strawberry Dump Cake</span></a> by Grace Tenny</li>
 				<li><a href="recipetemplate.html"><span class="recipe">Recipe R3</span></a> by Reginald Finney</li>
 			</ul>
 		</div>
