--- a/home.html
+++ b/home.html
@@ -14,7 +14,7 @@
 		<main>
 		<div id="recipelist">
 			<ul>
-				<li><a href="recipetemplate.html"><span class="recipe">Recipe R1</span></a> by Eddie Estrada</li>
+				<li><a href="texasSheetCake.html"><span class="recipe">Recipe R1</span></a> by Eddie Estrada</li>
 				<li><a href="strawberrydumpcake.html"><span class="recipe">Strawberry Dump Cake</span></a> by Grace Tenny</li>
 				<li><a href="pancakes.html"><span class="recipe">Recipe R3</span></a> by Reginald Finney</li>
 			</ul>
